--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </li>
 
           <li class="nav-item dropdown dropdown-hover mx-2">
-            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" aria-expanded="false" href="about-us.html">
+            <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs" aria-expanded="false" href="aboutus.html">
               <i class="material-icons opacity-6 me-2 text-md">article</i>
               关于我们
 <!--              <img src="./assets/img/down-arrow-white.svg" alt="down-arrow" class="arrow ms-auto ms-md-2 d-lg-block d-none">-->
@@ -201,12 +201,12 @@
             <h6 class="text-sm">Company</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="about-us.html" target="_blank">
+                <a class="nav-link" href="aboutus.html" target="_blank">
                   About Us
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact-us.html" target="_blank">
+                <a class="nav-link" href="contactus.html" target="_blank">
                   Contact Us
                 </a>
               </li>
